# servicehisilicon

./: README.md  configure.ac
.github/workflows/: servicehisilicon.yml
locale/: ServiceHisilicon.pot  es.po
plugin/: __init__.py  plugin.py
servicehisilicon/: pythonmodule.cpp  servicehisilicon.cpp  servicehisilicon.h
